--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
             <button type="submit">Get Recommendation</button>
         </form>
         <div id="result"></div>
+
+        <h2>Saved Records</h2>
+        <table id="records-table">
+            <tr>
+                <th>Name</th>
+                <th>School</th>
+                <th>Age</th>
+                <th>Gender</th>
+                <th>Recommended Genre</th>
+            </tr>
+        </table>
     </div>
 
     <script src="script.js"></script>
